--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="styles.css">
     <script src="qrcode.min.js"></script>
     <script src="script.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GN4P2WDSCR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-GN4P2WDSCR');
+    </script>
+
 </head>
 <body>
 <div class="wrapper">
@@ -14,9 +25,9 @@
         <div class="title">share</div>
     </div>
     <form id="upload-form">
-        <input type="file" name="file">
+        <input type="file" name="file"><br/>
         <button type="submit" value="submit" disabled>Upload</button>
-    </form>
+    </form>    
     <div id="upload-result">
     </div>
     <div id="qr-code">
@@ -34,8 +45,10 @@
         if (fileSelector.files && fileSelector.files.length > 0) {
             const filename = fileSelector.files[0].name;
             console.log('Getting perSigned upload URL...');
+            uploadResultDiv.innerHTML = 'Checking the file...';
             uploadParams = await getPreSignedUrl(filename);
             console.log(uploadParams);
+            uploadResultDiv.innerHTML = 'Ready to upload!';
             submitButton.disabled = false;
         }
     });
